<resources>
    <string name="app_name">Regan_Perry</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="title_activity_find_event">FindEventActivity</string>

    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="add_event_title">Enter New Event!</string>
    <string name="event_hint">Enter event name here...</string>
    <string name="action_settings">Settings</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="add_event">Add event</string>
    <string name="add_detail">Add detail</string>

    <string name="date_selected"></string>

    <string name="time_save">Set Time</string>
    <string name="time_selected"></string>
    <string name="find_an_event">Find an event</string>
    <string name="enter_event_name">Enter event name..</string>
    <string name="submit">Submit</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="search_results">Search Results:</string>
    <string name="item_name">Item Name:</string>
    <string name="unit">Unit:</string>
    <string name="quantity">Quantity:</string>
    <string name="units">Units:</string>

    <string name="item_name_label">Item Name:</string>
    <string name="unit_label">Unit:</string>
    <string name="quantity_label">Quantity:</string>
    <string name="addDetailErrorLabel">Please fill out all forms</string>
</resources>
