<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="top">
    <include layout="@layout/toolbar_main" android:id="@+id/toolbar" />
    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_an_event"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/search_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_event_name"/>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>
