<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventActivity" >
    <include layout="@layout/toolbar_main" android:id="@+id/toolbar" />

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/timePicker1" />

    <Button
        android:id="@+id/set_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:onClick="setDate"
        android:text="@string/date_button_set" />


    <Button
        android:id="@+id/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_event_button"
        android:layout_alignBottom="@+id/add_event_button"
        android:layout_alignParentStart="true"
        android:onClick="setTime"
        android:text="@string/time_save" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:headerBackground="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/set_button"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_selected"
            android:textColorLink="@color/colorPrimaryDark"
            android:gravity="start"/>

        <TextView
            android:id="@+id/date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_selected"
            android:gravity="end"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/add_event" />

</RelativeLayout>