<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity" >
    <include layout="@layout/toolbar_main" android:id="@+id/toolbar" />

    <TextView
        android:id="@+id/add_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:text="@string/add_event_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_event_title" />

    <TextView
        android:id="@+id/date_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_entry"
        android:text="@string/date_selected"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/set_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/date_view"
        android:layout_marginTop="26dp"
        android:onClick="setDate"
        android:text="@string/date_button_set" />


    <TextView
        android:id="@+id/time_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/time_selected"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/set_date_button"
        android:layout_alignBottom="@+id/set_date_button"
        android:layout_alignParentStart="true"
        android:onClick="setTime"
        android:text="@string/time_save" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:headerBackground="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/date_view"
        android:layout_centerVertical="true"
        android:text="@string/time_selected"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/time_selected"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/add_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/set_date_button"
        android:layout_centerHorizontal="true"
        android:text="@string/add_event" />

</RelativeLayout>